# jira2markdown

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yml
jira2markdown/: __init__.py  cli.py  elements.py  parser.py
jira2markdown/markup/: advanced.py  base.py  headings.py  images.py  links.py  lists.py  tables.py  text_breaks.py  text_effects.py
src/jira2markdown/: __init__.py  cli.py  elements.py  parser.py
src/jira2markdown/markup/: advanced.py  images.py  links.py  lists.py  tables.py  text_breaks.py
tests/: test_cli.py  test_convert.py
tests/markup/: test_advanced.py  test_elements.py  test_headings.py  test_images.py  test_links.py  test_lists.py  test_mixed_content.py  test_tables.py  test_text_breaks.py  test_text_effects.py
