[project]
name = "jira2markdown"
version = "0.7.0"
description = "Convert text from JIRA markup to Markdown using parsing expression grammars"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Evgeniy Krysanov", email = "evgeniy.krysanov@gmail.com" },
]
maintainers = [
    { name = "Evgeniy Krysanov", email = "evgeniy.krysanov@gmail.com" },
]
keywords = ["jira", "markdown"]
classifiers = [
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pyparsing>=3",
]

[project.optional-dependencies]
cli = [
    "typer>=0.25.1",
]

[project.urls]
repository = "https://github.com/vicgor/jira2markdown"
bug-tracker = "https://github.com/vicgor/jira2markdown/issues"
changelog = "https://github.com/vicgor/jira2markdown/blob/main/CHANGELOG.md"

[project.scripts]
jira2markdown = "jira2markdown.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira2markdown"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "ANN",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "I",
    "PTH",
    "RSE",
    "Q",
    "TC",
    "UP",
    "W",
]
ignore = [
    "COM812",
]
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
